2nd attempt at fixing line spacing

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ a​:hover {
 }
 
 .wikicard {
-  line-height: 18vh; 
+  
   vertical-align: middle;
   width: 98%;
   margin-left: auto;
